meja/tests/stdlib.stderr
File "tests/stdlib.meja", line 8, characters 45-49:
Error: Unbound constructor true.
